Locale file updates.

--- a/src/main/resources/locale/locale_da.properties
+++ b/src/main/resources/locale/locale_da.properties
@@ -378,6 +378,7 @@ Commands.mcrefresh.Success=[[RED]]{0}\'\'s nedk\u00f8ling er blevet genindl\u00e
 Commands.mcremove.Success=[[GREEN]]{0} er succesfuldt fjernet fra databasen!
 Commands.mctop.Tip=[[GOLD]]Tip: Brug [[RED]]/mcrank[[GOLD]] for at se all dine personlige rangs!
 Commands.mmoedit=[player] <skill> <newvalue> [[RED]] - \u00c6ndrer m\u00e5let
+Commands.mmoedit.AllSkills.1=[[GREEN]]Your level in all skills was set to {1}!
 Commands.mmoedit.Modified.1=[[GREEN]]Dit level i {0} er sat til {1}!
 Commands.mmoedit.Modified.2=[[RED]]{0} er blevet \u00e6ndret for {1}.
 Commands.mmoupdate.Start=[[GRAY]]Starter Samtale...
