--- a/src/main/resources/locale/locale_nl.properties
+++ b/src/main/resources/locale/locale_nl.properties
@@ -378,6 +378,7 @@ Commands.mcrefresh.Success=[[RED]]{0}\'\'s cooldowns have been refreshed.
 Commands.mcremove.Success=[[GREEN]]{0} was successfully removed from the database!
 Commands.mctop.Tip=[[GOLD]]Tip: Use [[RED]]/mcrank[[GOLD]] to view all of your personal rankings!
 Commands.mmoedit=[player] <Kracht> <Nieuwe waarde> [[RED]] - Pas doel aan
+Commands.mmoedit.AllSkills.1=[[GREEN]]Your level in all skills was set to {1}!
 Commands.mmoedit.Modified.1=[[GREEN]]Your level in {0} was set to {1}!
 Commands.mmoedit.Modified.2=[[RED]]{0} has been modified for {1}.
 Commands.mmoupdate.Start=[[GRAY]]Starting conversion...
@@ -391,25 +392,25 @@ Commands.Party.ShareMode=[[DARK_GRAY]]SHARE MODE:
 Commands.Party.ItemShare=[[GRAY]]ITEM [[DARK_AQUA]]({0})
 Commands.Party.ExpShare=[[GRAY]]EXP [[DARK_AQUA]]({0})
 Commands.Party.MembersNear=[[DARK_GRAY]]NEAR YOU [[DARK_AQUA]]{0}[[DARK_GRAY]]/[[DARK_AQUA]]{1}
-Commands.Party.Accept=[[RED]]- Accept party invite
-Commands.Party.Chat.Off=Party Chat only [[RED]]Off
-Commands.Party.Chat.On=Party Chat only [[GREEN]]On
+Commands.Party.Accept=[[RED]]- Accepteer groep uitnodiging
+Commands.Party.Chat.Off=Groep\'s Chat [[RED]]Uit
+Commands.Party.Chat.On=Groep\'s Chat [[GREEN]]Aan
 Commands.Party.Chat.Prefix=[[GREEN]]([[WHITE]]{0}[[GREEN]])
-Commands.Party.Commands=[[GREEN]]--PARTY COMMANDS--
+Commands.Party.Commands=[[GREEN]]--GROEP COMMANDOS--
 Commands.Party.Invite.0=[[RED]]ALERT: [[GREEN]]Jij hebt een groep uitnodiging ontvangen voor {0} van {1}
 Commands.Party.Invite.1=[[YELLOW]]Type [[GREEN]]/party accept[[YELLOW]] to accept the invite
 Commands.Party.Invite=[[RED]]- Send party invite
 Commands.Party.Join=[[GRAY]]Joined Party: {0}
 Commands.Party.Create=[[GRAY]]Created Party: {0}
-Commands.Party.Rename=[[GRAY]]Party name changed to: [[WHITE]]{0}
+Commands.Party.Rename=[[GRAY]]Groep\'s naan veranderd naar: [[WHITE]]{0}
 Commands.Party.SetSharing=[[GRAY]]Party {0} sharing set to: [[DARK_AQUA]]{1}
-Commands.Party.AlreadyExists=[[DARK_RED]]Party {0} already exists!
+Commands.Party.AlreadyExists=[[DARK_RED]]Groep {0} bestaat al!
 Commands.Party.Kick=[[RED]]Je bent verwijderd uit de groep {0}!
 Commands.Party.Leave=[[RED]]Je hebt de groep verlaten
 Commands.Party.Members.Header=[[RED]]-----[][[GREEN]]MEMBERS[[RED]][]-----
 Commands.Party.Members={0}
 Commands.Party.None=[[RED]]Je bent niet in een groep.
-Commands.Party.Quit=[[RED]]- Leave your current party
+Commands.Party.Quit=[[RED]]- Verlaat je huidige groep
 Commands.Party.Teleport=<player> [[RED]]- Teleport naar een groepslid
 Commands.Party.Toggle=[[RED]]- Zet Party Chat aan/uit
 Commands.Party1=[[RED]]- Create a new party
@@ -421,7 +422,7 @@ Commands.ptp.Request1=[[YELLOW]]{0} [[GREEN]]has requested to teleport to you.
 Commands.ptp.Request2=[[GREEN]]To teleport, type [[YELLOW]]/ptp accept. [[GREEN]]Request expires in [[RED]]{0} [[GREEN]]seconds.
 Commands.ptp.AcceptAny.Enabled=Party teleport request confirmation [[GREEN]]enabled
 Commands.ptp.AcceptAny.Disabled=Party teleport request confirmation [[RED]]disabled
-Commands.ptp.RequestExpired=[[RED]]Party teleport request has expired!
+Commands.ptp.RequestExpired=[[RED]]Groep\'s teleport verzoek is verlopen!
 Commands.PowerLevel.Leaderboard=[[YELLOW]]--mcMMO[[BLUE]] Kracht Level [[YELLOW]]Leiderbord--
 Commands.PowerLevel.Capped=[[DARK_RED]]POWER LEVEL: [[GREEN]]{0} [[DARK_RED]]MAX LEVEL: [[YELLOW]]{1}
 Commands.PowerLevel=[[DARK_RED]]KRACHT LEVEL: [[GREEN]]{0}
@@ -455,13 +456,13 @@ Party.Help.2=[[RED]]Consult [[DARK_AQUA]]/party ? [[RED]]for more information
 Party.Help.3=[[RED]]Use [[DARK_AQUA]]/party join <player> [[RED]]to join or [[DARK_AQUA]]/party quit [[RED]]to quit
 Party.Help.4=[[RED]]To lock or unlock your party, use [[DARK_AQUA]]/party <lock>
 Party.Help.5=[[RED]]To password protect your party, use [[DARK_AQUA]]/party password <password>
-Party.Help.6=[[RED]]To kick a player from your party, use [[DARK_AQUA]]/party kick <player>
+Party.Help.6=[[RED]]Om een speler uit de groep te verwijderen, gebruik [[DARK_AQUA]]/party kick <player>
 Party.Help.7=[[RED]]To transfer ownership of your party, use [[DARK_AQUA]]/party owner <player>
 Party.Help.8=[[RED]]To disband your party, use [[DARK_AQUA]]/party disband
 Party.InformedOnJoin={0} [[GREEN]]has joined your party
 Party.InformedOnQuit={0} [[GREEN]]has left your party
 Party.InformedOnNameChange=[[GOLD]]{0} [[GREEN]]has set the party name to [[WHITE]]{1}
-Party.InvalidName=[[DARK_RED]]That is not a valid party name.
+Party.InvalidName=[[DARK_RED]]Dat is geen geldige groep\'s naam.
 Party.IsLocked=[[RED]]Deze groep is al gesloten!
 Party.IsntLocked=[[RED]]Deze groep is niet gesloten!
 Party.Locked=[[RED]]De groep is gesloten, alleen de groepsleider kan spelers uitnodigen.
@@ -476,8 +477,8 @@ Party.Password.Set=[[GREEN]]Groep wachtwoord veranderd in {0}
 Party.Password.Removed=[[GREEN]]Party password has been cleared.
 Party.Player.Invalid=[[RED]]That is not a valid player.
 Party.NotOnline=[[DARK_RED]]{0} is not online!
-Party.Player.InSameParty=[[RED]]{0} already is in your party!
-Party.PlayerNotInParty=[[DARK_RED]]{0} is not in a party
+Party.Player.InSameParty=[[RED]]{0} zit al in uw groep!
+Party.PlayerNotInParty=[[DARK_RED]]{0} zit niet in een groep
 Party.Teleport.Dead=[[RED]]You can\'t teleport to a dead player.
 Party.Teleport.Hurt=[[RED]]You\'ve been hurt in the last {0} seconds and cannnot teleport.
 Party.Teleport.Player=[[GREEN]]You have teleported to {0}.
