--- a/src/main/resources/locale/locale_zh_CN.properties
+++ b/src/main/resources/locale/locale_zh_CN.properties
@@ -378,6 +378,7 @@ Commands.mcrefresh.Success=[[RED]]{0}\'\'s cooldowns have been refreshed.
 Commands.mcremove.Success=[[GREEN]]{0} \u5df2\u4ece\u6570\u636e\u5e93\u4e2d\u6210\u529f\u79fb\u9664!
 Commands.mctop.Tip=[[GOLD]]\u63d0\u793a: \u4f7f\u7528 [[RED]]/mcrank[[GOLD]] \u6765\u67e5\u770b\u4f60\u6240\u6709\u7684\u4e2a\u4eba\u6392\u540d!
 Commands.mmoedit=[player] <skill> <newvalue> [[RED]] - \u7f16\u8f91\u76ee\u6807
+Commands.mmoedit.AllSkills.1=[[GREEN]]Your level in all skills was set to {1}!
 Commands.mmoedit.Modified.1=[[GREEN]]\u4f60\u7684\u7b49\u7ea7 {0} \u88ab\u8bbe\u7f6e\u4e3a {1}!
 Commands.mmoedit.Modified.2=[[RED]]{0} has been modified for {1}.
 Commands.mmoupdate.Start=[[GRAY]]Starting conversion...
