This is a much better way to work with our commands dynamically. It allows for localized description strings, aliases, etc.
With this addition, our "ugly alias" method in CommandPreProcessEvent is
no longer needed, nor is our alias map.

This also makes us more friendly with Essentials - if Essentials is
enabled, the /repair command will be changed to /mcrepair for
compatibility reasons.

--- a/src/main/resources/locale/locale_en_US.properties
+++ b/src/main/resources/locale/locale_en_US.properties
@@ -684,3 +684,6 @@ Smelting.Effect.7=Chance for ores to be instantly smelted while mining
 Smelting.FluxMining.Success=[[GREEN]]That ore smelted itself!
 Smelting.Listener=Smelting: 
 Smelting.SkillName=SMELTING
+
+#COMMAND DESCRIPTIONS
+Commands.Description.Skill=Detailed skill info for {0}
