Rework /addlevels to use the built-in Bukkit command stuff.

--- a/src/main/resources/locale/locale_en_US.properties
+++ b/src/main/resources/locale/locale_en_US.properties
@@ -686,4 +686,5 @@ Smelting.Listener=Smelting:
 Smelting.SkillName=SMELTING
 
 #COMMAND DESCRIPTIONS
-Commands.Description.Skill=Detailed skill info for {0}
+Commands.Description.addlevels=Add mcMMO levels to a user
+Commands.Description.Skill=Detailed mcMMO skill info for {0}
