Update /addxp to use Bukkit handling by default rather than ours.

--- a/src/main/resources/locale/locale_en_US.properties
+++ b/src/main/resources/locale/locale_en_US.properties
@@ -687,4 +687,5 @@ Smelting.SkillName=SMELTING
 
 #COMMAND DESCRIPTIONS
 Commands.Description.addlevels=Add mcMMO levels to a user
+Commands.Description.addxp=Add mcMMO XP to a user
 Commands.Description.Skill=Detailed mcMMO skill info for {0}
