--- a/src/main/resources/locale/locale_en_US.properties
+++ b/src/main/resources/locale/locale_en_US.properties
@@ -688,4 +688,5 @@ Smelting.SkillName=SMELTING
 #COMMAND DESCRIPTIONS
 Commands.Description.addlevels=Add mcMMO levels to a user
 Commands.Description.addxp=Add mcMMO XP to a user
+Commands.Description.mcgod=Toggles mcMMO god-mode on/off
 Commands.Description.Skill=Detailed mcMMO skill info for {0}
