Update /mcrefresh to use Bukkit command info. Also updated a few description strings.

--- a/src/main/resources/locale/locale_en_US.properties
+++ b/src/main/resources/locale/locale_en_US.properties
@@ -688,5 +688,6 @@ Smelting.SkillName=SMELTING
 #COMMAND DESCRIPTIONS
 Commands.Description.addlevels=Add mcMMO levels to a user
 Commands.Description.addxp=Add mcMMO XP to a user
-Commands.Description.mcgod=Toggles mcMMO god-mode on/off
-Commands.Description.Skill=Detailed mcMMO skill info for {0}
+Commands.Description.mcgod=Toggle mcMMO god-mode on/off
+Commands.Description.mcrefresh=Refresh all cooldowns for mcMMO
+Commands.Description.Skill=Display detailed mcMMO skill info for {0}
