Add description string for /skillreset to the locale file

--- a/src/main/resources/locale/locale_en_US.properties
+++ b/src/main/resources/locale/locale_en_US.properties
@@ -692,3 +692,4 @@ Commands.Description.mcgod=Toggle mcMMO god-mode on/off
 Commands.Description.mcrefresh=Refresh all cooldowns for mcMMO
 Commands.Description.mmoedit=Edit mcMMO levels for a user
 Commands.Description.Skill=Display detailed mcMMO skill info for {0}
+Commands.Description.skillreset=Reset mcMMO levels for a user
