Removed Chimaera Wing
"RIP Chimera wing, an archaic item from a decadent past" ~ shatteredbeam

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -62,6 +62,7 @@ Version 1.4.00-dev
  - Removed unused "healthbar" files from the resources
  - Removed config options for disabling commands from the config.yml. This should instead be done through permissions.
  - Removed "ac" alias from /a due to Essentials incompatibilities.
+ - Removed Chimaera Wing
 
 Version 1.3.14
  + Added new Hylian Luck skill to Herbalism.
