Update /inspect to use Bukkit command API. Addresses #628

--- a/src/main/resources/locale/locale_en_US.properties
+++ b/src/main/resources/locale/locale_en_US.properties
@@ -689,6 +689,7 @@ Smelting.SkillName=SMELTING
 #COMMAND DESCRIPTIONS
 Commands.Description.addlevels=Add mcMMO levels to a user
 Commands.Description.addxp=Add mcMMO XP to a user
+Commands.Description.inspect=View detailed mcMMO info on another player
 Commands.Description.mcgod=Toggle mcMMO god-mode on/off
 Commands.Description.mcrefresh=Refresh all cooldowns for mcMMO
 Commands.Description.mmoedit=Edit mcMMO levels for a user
