--- a/Changelog.txt
+++ b/Changelog.txt
@@ -24,6 +24,7 @@ Version 1.4.00-dev
  + Added party XP sharing, when more party members are near the share bonus increases.
  + Added vanilla XP boost for Fishing - includes permissions, config options, etc
  + Added particle effect for bleeding
+ + Added methods to check if a player is in party or admin chat to the ChatAPI
  = Fixed multiple commands not working properly on offline players
  = Fixed /mmoedit not giving feedback when modifying another players stats
  = Fixed the guide usage string showing up every time /skillname was called
