Tweak a few more things with Salvage.

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -27,7 +27,7 @@ Version 1.4.00-dev
  + Added methods to check if a player is in party or admin chat to the ChatAPI
  + Added /mcpurge functionality for Flatfile users
  + Added basic support for Mo' Creatures (and other entity mods) - specify mob info in entities.yml
- + Added Shears, Buckets, Fishing rods and Bows to the list of items that can be Salvaged
+ + Added Shears, Buckets, Fishing Rods, Flint & Steel, Carrot Sticks, and Bows to the list of items that can be Salvaged
  = Fixed multiple commands not working properly on offline players
  = Fixed /mmoedit not giving feedback when modifying another players stats
  = Fixed the guide usage string showing up every time /skillname was called
