Update /mmoupdate to use Bukkit CommandAPI. Addresses #628

--- a/src/main/resources/locale/locale_en_US.properties
+++ b/src/main/resources/locale/locale_en_US.properties
@@ -702,6 +702,7 @@ Commands.Description.mcremove=Remove a user from the mcMMO database
 Commands.Description.mcstats=Show your mcMMO levels and XP
 Commands.Description.mctop=Show mcMMO leader boards
 Commands.Description.mmoedit=Edit mcMMO levels for a user
+Commands.Description.mmoupdate=Convert mcMMO database from Flatfile to MySQL
 Commands.Description.Skill=Display detailed mcMMO skill info for {0}
 Commands.Description.skillreset=Reset mcMMO levels for a user
 Commands.Description.xprate=Modify the mcMMO XP rate or start an mcMMO XP event
