--- a/src/main/resources/locale/locale_en_US.properties
+++ b/src/main/resources/locale/locale_en_US.properties
@@ -495,6 +495,8 @@ Commands.Usage.3=[[RED]]Proper usage is /{0} {1} {2} {3}
 Commands.Usage.False=false
 Commands.Usage.Level=level
 Commands.Usage.Message=message
+Commands.Usage.Off=off
+Commands.Usage.On=on
 Commands.Usage.Page=page
 Commands.Usage.PartyName=party-name
 Commands.Usage.Password=password
@@ -538,6 +540,7 @@ Party.Player.Invalid=[[RED]]That is not a valid player.
 Party.NotOnline=[[DARK_RED]]{0} is not online!
 Party.Player.InSameParty=[[RED]]{0} already is in your party!
 Party.PlayerNotInParty=[[DARK_RED]]{0} is not in a party
+Party.Specify=[[RED]]You must specify a party.
 Party.Teleport.Dead=[[RED]]You can't teleport to a dead player.
 Party.Teleport.Hurt=[[RED]]You've been hurt in the last {0} seconds and cannnot teleport.
 Party.Teleport.Player=[[GREEN]]You have teleported to {0}.
@@ -690,12 +693,13 @@ Smelting.SkillName=SMELTING
 
 #COMMAND DESCRIPTIONS
 Commands.Description.addlevels=Add mcMMO levels to a user
+Commands.Description.adminchat=Toggle mcMMO admin chat on/off or send admin chat messages
 Commands.Description.addxp=Add mcMMO XP to a user
 Commands.Description.inspect=View detailed mcMMO info on another player
 Commands.Description.mcability=Toggle mcMMO abilities being readied on right-click on/off
 Commands.Description.mcgod=Toggle mcMMO god-mode on/off
 Commands.Description.mcmmo=Show a brief description of mcMMO
-Commands.Description.mcpurge=Purge users with no mcMMO levels and users who haven't connected in over {0} months from the mcMMO database.
+Commands.Description.mcpurge=Purge users with no mcMMO levels and users who have not connected in over {0} months from the mcMMO database.
 Commands.Description.mcrank=Show mcMMO ranking for a player
 Commands.Description.mcrefresh=Refresh all cooldowns for mcMMO
 Commands.Description.mcremove=Remove a user from the mcMMO database
@@ -703,6 +707,7 @@ Commands.Description.mcstats=Show your mcMMO levels and XP
 Commands.Description.mctop=Show mcMMO leader boards
 Commands.Description.mmoedit=Edit mcMMO levels for a user
 Commands.Description.mmoupdate=Convert mcMMO database from Flatfile to MySQL
+Commands.Description.partychat=Toggle mcMMO party chat on/off or send party chat messages
 Commands.Description.Skill=Display detailed mcMMO skill info for {0}
 Commands.Description.skillreset=Reset mcMMO levels for a user
 Commands.Description.xprate=Modify the mcMMO XP rate or start an mcMMO XP event
