--- a/Changelog.txt
+++ b/Changelog.txt
@@ -17,7 +17,7 @@ Version 1.4.00-dev
  + Added '/ptp toggle' command, to disable party teleportation.
  + Added '/ptp accept' and '/ptp acceptall' commands
  + Added an automatic party kick when a party member has been offline for 7 days (default)
- + Added a config option to allow friendly fire in parties.
+ + Added a permission to allow friendly fire in parties, both attacker and defender must have it for friendly fire to occur
  + Added timeout on party teleport requests
  + Added XP bonus for Archery based on distance from shooter to target
  + Added ability to config Hylian Luck drops through treasures.yml
