Make /party join into a subcommand.

--- a/src/main/resources/locale/locale_en_US.properties
+++ b/src/main/resources/locale/locale_en_US.properties
@@ -528,7 +528,7 @@ Party.NotOwner=[[DARK_RED]]You are not the party leader.
 Party.Owner.New=[[GREEN]]{0} is the new party leader.
 Party.Owner.NotLeader=[[DARK_RED]]You are no longer the party leader.
 Party.Owner.Player =[[GREEN]]You are now the party leader.
-Party.Password.None=[[RED]]This party is password protected.
+Party.Password.None=[[RED]]This party is password protected. Please provide a password to join.
 Party.Password.Incorrect=[[RED]]Party password is incorrect.
 Party.Password.Set=[[GREEN]]Party password set to {0}
 Party.Password.Removed=[[GREEN]]Party password has been cleared.
